--- a/style.css
+++ b/style.css
@@ -326,24 +326,22 @@ position: relative;
 }
 
 .article-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* two equal columns */
-  gap: 1.5rem 2rem; /* row and column spacing */
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
 }
-
 
 article {
-  display: flex;
-  align-items: flex-start;
-  gap: 0.75rem;
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
 }
 
-
 article .icon {
-width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-  margin-top: 4px;
     cursor: default;
 }
 
